Seperate .colorscheme/.gcolorscheme files
Use .gcolorscheme to store the last used colorscheme when running
a graphical version of vim (gvim, macvim, etc...) The allows one
to have a different saved colorscheme for the gui and text
versions of vim.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 .netrwhist
 .vimrc.swp
 
+# ignore vim-colorscheme-manager files
+vim/.colorscheme
+vim/.gcolorscheme
+
 # ignore all files and dirs in the vim/bundle directory
 # except the README.md file.
 vim/bundle/**
