--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ home/.vim/.gcolorscheme
 
 # ignore all files and dirs in the vim/plugged directory
 home/.vim/plugged/**
+
+# ignore spelling files
+home/.vim/spell
